--- a/src/app/components/sidebar/task-details-sidebar/task-details-sidebar.component.html
+++ b/src/app/components/sidebar/task-details-sidebar/task-details-sidebar.component.html
@@ -1,38 +1,41 @@
-<div class="sidebar flex flex-col justify-between">
+<div class="sidebar flex flex-col justify-between" [class.sidebar-collapsed]="isCollapsed()">
     <div class="top-sidebar">
-        <div class="title-section flex flex-row justify-between">
-            <div class="sidebar-title">Task</div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28" fill="none">
-                <path d="M21 7L7 21M7 7L21 21" stroke="#66707A" stroke-width="2.10914" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
-        </div>
-        <div class="name-section flex flex-row">
-            <svg class="important cursor-pointer" [class]="{'checked': isImportant()}" #importantEl
-                (click)="checkAsImportant()" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"
-                fill="none">
-                <path
-                    d="M9.99996 1.66667L12.575 6.88334L18.3333 7.72501L14.1666 11.7833L15.15 17.5167L9.99996 14.8083L4.84996 17.5167L5.83329 11.7833L1.66663 7.72501L7.42496 6.88334L9.99996 1.66667Z"
-                    stroke="#EE9322" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-            <div class="title-name">
-                 <input type="text" value="Go to the market">
+        <form [formGroup]="todoTaskDetailsForm">
+            <div class="title-section flex flex-row justify-between">
+                <div class="sidebar-title">Task</div>
+                <svg class="cursor-pointer" xmlns="http://www.w3.org/2000/svg" width="28" height="28"
+                    viewBox="0 0 28 28" fill="none" (click)="closeSidebar()">
+                    <path d="M21 7L7 21M7 7L21 21" stroke="#66707A" stroke-width="2.10914" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
             </div>
-        </div>
-        <div class="description-section">
-            <textarea placeholder="Description"></textarea>
-        </div>
-        <div class="date-section flex flex-row items-center">
-            <span class="date-title">Date:</span> 
-            <app-date-picker (dateChangeEventEmit)="changeDate($event)"></app-date-picker>
-        </div>
-        <div class="tags-section flex flex-row flex-wrap gap-y-[10px] items-center">
-            <span class="tags-title">Tags:</span>
-            <app-tag>Tag 1</app-tag>
-            <app-add-tag addTagModalTitle="Select Tags"></app-add-tag>
-        </div>
-        <div class="subtasks-section">
-            <app-subtask [subtasksList]="[
+            <div class="name-section flex flex-row">
+                <svg class="important cursor-pointer"
+                    [class]="{'checked': false}" #importantEl
+                    (click)="checkAsImportant()" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    viewBox="0 0 20 20" fill="none">
+                    <path
+                        d="M9.99996 1.66667L12.575 6.88334L18.3333 7.72501L14.1666 11.7833L15.15 17.5167L9.99996 14.8083L4.84996 17.5167L5.83329 11.7833L1.66663 7.72501L7.42496 6.88334L9.99996 1.66667Z"
+                        stroke="#EE9322" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                <div class="title-name">
+                    <input type="text" formControlName="name">
+                </div>
+            </div>
+            <div class="description-section">
+                <textarea placeholder="Description" formControlName="description"></textarea>
+            </div>
+            <div class="date-section flex flex-row items-center">
+                <span class="date-title">Date:</span>
+                <app-date-picker (dateChangeEventEmit)="changeDate($event)"></app-date-picker>
+            </div>
+            <div class="tags-section flex flex-row flex-wrap gap-y-[10px] items-center">
+                <span class="tags-title">Tags:</span>
+                <app-tag>Tag 1</app-tag>
+                <app-add-tag addTagModalTitle="Select Tags"></app-add-tag>
+            </div>
+            <div class="subtasks-section">
+                <app-subtask [subtasksList]="[
                 {
                     'id': 'abcdef',
                     'name': 'Buy rice',
@@ -43,12 +46,14 @@
                     'name': 'Buy fish',
                     'isDone': false
                 }
-                ]" (doneSubtaskEventEmitter)="toggleDoneSubtask($event)" (addNewSubtaskEventEmitter)="addNewSubtask($event)"
-                (deleteSubtaskEventEmitter)="deleteSubtask($event)"></app-subtask>
-        </div>
+                ]" (doneSubtaskEventEmitter)="toggleDoneSubtask($event)"
+                    (addNewSubtaskEventEmitter)="addNewSubtask($event)"
+                    (deleteSubtaskEventEmitter)="deleteSubtask($event)"></app-subtask>
+            </div>
+        </form>
     </div>
     <div class="bottom-sidebar flex flex-row gap-x-[18px]">
         <app-button class="grow" buttonType="Cancel">Delete Task</app-button>
-        <app-button class="grow" buttonType="Ok">Save Changes</app-button>
+        <app-button class="grow" buttonType="Ok" (click)="saveChanges()">Save Changes</app-button>
     </div>
 </div>
