--- a/src/app/components/sidebar/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar/sidebar.component.scss
@@ -46,8 +46,14 @@
         margin-top: 25px;
         max-height: 170px;
         height: 170px;
-        overflow-y: auto;
-        overflow-x: hidden;
+        margin-bottom: 10px;
+
+        .tags {
+            height: 80px;
+            overflow-y: auto;
+            overflow-x: hidden;
+            margin-bottom: 10px;
+        }
 
         .tags-list-title {
             font-size: 15px;
