--- a/src/app/components/modals/account/account.component.html
+++ b/src/app/components/modals/account/account.component.html
@@ -2,11 +2,11 @@
     <ng-container *nzModalContent>
         <div class="relative heading">
             <div></div>
-            <img class="profile-avatar" [src]="avatar.value" width="100" height="100" draggable="false" />
+            <img class="profile-avatar" [src]="avatar.value ? avatar.value : '../assets/images/user/default-avatar.jpg'" width="100" height="100" draggable="false" />
         </div>
         <div class="content">
-            <div class="fullname">{{ account().firstName | fullName : account().lastName ?? "" }}</div>
-            <div class="user-id">&#64;{{ account().username }}</div>
+            <div class="fullname">{{ user.firstName | fullName : user.lastName }}</div>
+            <div class="user-id">&#64;{{ user.username }}</div>
             <form>
                 <div class="form-group grid grid-cols-6 items-center">
                     <span class="title">Name</span>
@@ -30,8 +30,8 @@
                 <div class="form-group grid grid-cols-6 justify-between items-center">
                     <span class="title">Avatar</span>
                     <div class="col-span-5 flex flex-row items-center">
-                        <img class="profile-avatar" [src]="avatar.value" width="70" height="70" draggable="false" />
-                        <app-button buttonAction="button" buttonType="Outline" buttonSize="sm">Replace</app-button>
+                        <img class="profile-avatar" [src]="avatar.value ? avatar.value : '../assets/images/user/default-avatar.jpg'" width="70" height="70" draggable="false" />
+                        <app-button-file-upload (base64ImageEventEmitter)="setBase64AvatarImage($event)">Replace</app-button-file-upload>
                     </div>
                 </div>
             </form>
