--- a/src/app/pages/todo-task/search/search.component.scss
+++ b/src/app/pages/todo-task/search/search.component.scss
@@ -1,6 +1,6 @@
 @use "../../../../../public/assets/sass/abstracts/variables";
 
-.todo-task-today {
+.todo-task-search {
     height: 100%;
     
     .main-content {
