--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
 main {
     font-family: "Roboto", sans-serif;
+    display: flex;
+    padding: 25px 30px;
+    height: 100vh;
+
+    > ::ng-deep:nth-child(3) {
+        flex: 1;
+    }
 }
