--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,15 @@
 main {
     font-family: "Roboto", sans-serif;
-    display: flex;
-    padding: 25px 30px;
-    height: 100vh;
 
-    > ::ng-deep:nth-child(3) {
+    > ::ng-deep app-shell {
+        width: fit-content;
+        display: flex;
         flex: 1;
+        padding: 25px 30px;
+        width: 100%;
+
+        > :nth-child(3) {
+            flex: 1;
+        }
     }
 }
